# easyspc

./: MANIFEST.in  README.md  pyproject.toml
.github/workflows/: cd.yml
easyspc/: __init__.py  base.py  chart.py  charts.py  const.py  i_mr.py  plotly.json  rules.py  stacked.json  x_bar_r.py  x_bar_s.py
tests/: test_chart.py  test_rules.py
