[project]
name = "easyspc"
description = "Easy statistical process controls library."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
dependencies = ["plotly"]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/mcpcpc/easyspc"

[project.optional-dependencies]
dev = ["coverage", "black"]

[tool.setuptools.dynamic]
version = {attr = "easyspc.__version__"}

[tool.setuptools]
packages = ["easyspc"]

[tool.coverage.run]
branch = true
source = ["easyspc"]
